--- a/styles/main.css
+++ b/styles/main.css
@@ -18,7 +18,7 @@
     .column.half { width: 50%; }
     .column.third { width: 33.3%; }
     .column.fourth { width: 25%; }
-    .column.flow-opposite { float: right; } 
+    .column.flow-opposite { float: right; }
  }
 
  /* Large screens (1024px) */
@@ -52,4 +52,14 @@ body{
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+.clearfix::before,
+.clearfix::after {
+   content: " ";
+   display: table;
+}
+
+.clearfix::after {
+   clear: both;
 }
